@@ -5,6 +5,9 @@ AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE(gtk-sharp, 0.19)
 AM_MAINTAINER_MODE
 
+API_VERSION=1.0.0.0
+AC_SUBST(API_VERSION)
+
 AC_CHECK_TOOL(CC, gcc, gcc)
 AC_PROG_CC
 AM_PROG_CC_STDC
