@@ -1,5 +1,11 @@
 2004-04-30  Mike Kestner  <mkestner@ximian.com>
 
+	* configure.in : AC_SUBST an API_VERSION=1.0.0.0 for the 
+	AssemblyVersionAttributes.
+	* */AssemblyInfo.cs.in : s/@VERSION@/@API_VERSION@/
+
+2004-04-30  Mike Kestner  <mkestner@ximian.com>
+
 	* */AssemblyInfo.cs.in : s/@VERSION@.0.0/@VERSION@/
 
 2004-04-30  Mike Kestner  <mkestner@ximian.com>
